--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,11 +1,29 @@
-:root{
-    --primary-color: #1a0457;
-    --secondary-color: #f2f2f2;
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+:root {
+  --primary-color: #072227;
+  --secondary-color: #aefeff;
+  --third-color: #35858b;
+  --fourth-color: #032f36;
 }
 
-.nav-item{
-    background-color: blue;
-    padding: 5px 5px;
-    color: var(--secondary-color);
-    
+.nav {
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.nav-item {
+  font-family: "Quicksand", sans-serif;
+  padding: 7px 15px;
+  color: var(--secondary-color);
+  font-size: 1.5rem;
+  text-decoration: none;
+  border-radius: 10px;
+  /* text-transform: uppercase; */
+  margin-left: 2rem;
+}
+.nav-item:hover {
+  background-color: var(--third-color);
+  color: var(--primary-color);
+  transition: 0.5s;
 }
