--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -7,7 +7,7 @@
 }
 .home-subheading{
     font-family: 'Licorice', cursive;
-    font-size: 5vw;
+    font-size: 20vh;
     color: #fff;
     text-align: center;
     margin-top: 10vh;
