--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Licorice&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap');
 .home{
     background: url(../img/background.svg)  ;
     background-repeat: repeat-x,y;
@@ -7,8 +8,14 @@
 }
 .home-subheading{
     font-family: 'Licorice', cursive;
-    font-size: 20vh;
-    color: #fff;
+    font-size: 4rem;
+    color: var(--secondary-color);
     text-align: center;
     margin-top: 10vh;
+}
+.home-heading{
+    text-align: center;
+    color: var(--fifth-color);
+    font-family: 'Maven Pro', sans-serif;
+    font-size: 5rem;
 }
