--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -3,7 +3,7 @@
     text-align: center;
 }
 .about-title{
-    font-size: 3.5rem;
+    font-size: 3.0rem;
     color: var(--third-color);
     font-family: 'Maven Pro', sans-serif;
 
@@ -17,8 +17,14 @@
 } */
 .about-p{
     float: left;
+    margin-left: 2rem;
+    color: var(--third-color);
+    font-size: 1.5rem;
 }
 .profile{
     float: right;
-    width: 350px;
+    width: 400px;
+    margin-right: 13%;   
+    border-radius: 80%;  
+    box-shadow: 0px 4px 92px rgba(173, 26, 241, 0.911);
 }
